--- a/14_form/templates/response.html
+++ b/14_form/templates/response.html
@@ -4,7 +4,6 @@
   SoftDev
   K14 -- Form and Function
   2021-10-14
-
   Simple demo of HTML forms via Flask
  -->
 
@@ -13,6 +12,12 @@
 
   <head>
     <title> Greetings </title>
+    <h1>
+      Team threeCoffeePeanuts: Jesse Xie, Yaying Liang Li, Ryan Wang <br>
+      SoftDev <br>
+      K14 -- Form and Function <br>
+      2021-10-14 <br>
+    </h1>
   </head>
 
   <body>
@@ -20,28 +25,35 @@
       Care for a coffee peanut?
     </h1>
 
+    <!---
+      the values of the variables here (username, method) were inputted in app.py
+    --->
     <h3> The entered username was {{ username }} </h3>
     <h3> The request method used was {{ method }} </h3>
 
-    <pre>      
- 
-               ,+.     ,+.     ,+.    
-              ((|))   ((|))   ((|))  
-               )|(     )|(     )|(   
-              ((|))   ((|))   ((|))  
-               `-'     `-'     `-'   
-                (  )   (   )  )             
-                 ) (   )  (  (                 
-                 ( )  (    ) )                 
-                 _____________                 
-                <_____________> ___            
-                |             |/ _ \           
-                |               | | |          
-                |               |_| |          
-             ___|             |\___/           
-             /    \___________/    \           
-             \_____________________/           
-   
+
+    <!---
+      pre refers to preformatted text
+    --->
+    <pre>
+
+               ,+.     ,+.     ,+.
+              ((|))   ((|))   ((|))
+               )|(     )|(     )|(
+              ((|))   ((|))   ((|))
+               `-'     `-'     `-'
+                (  )   (   )  )
+                 ) (   )  (  (
+                 ( )  (    ) )
+                 _____________
+                <_____________> ___
+                |             |/ _ \
+                |               | | |
+                |               |_| |
+             ___|             |\___/
+             /    \___________/    \
+             \_____________________/
+
     </pre>
 
     <br>
