--- a/15_session/templates/response.html
+++ b/15_session/templates/response.html
@@ -23,8 +23,8 @@
       the values of the variables here (username, method) were inputted in app.py
     --->
 
-    <h3> The entered username was {{ username }} </h3>
-    <h3> The request method used was {{ method }} </h3>
+    <h3> The entered username was "{{ username }}" </h3>
+    <h3> The request method used was "{{ method }}" </h3>
 
 
     <!---
@@ -50,8 +50,9 @@
              \_____________________/
 
     </pre>
-
     <br>
   </body>
-
+  <a href="http://127.0.0.1:5000/">
+     <input type="logout"/>
+  </a>
 </html>
