--- a/15_session/templates/login.html
+++ b/15_session/templates/login.html
@@ -31,7 +31,6 @@
       Welcome, Travelers of the Intertoobz!
     </h1>
 
-
     <h3>
       Enter your username and password below to proceed.
     </h3>
@@ -42,5 +41,7 @@
     </form>
     <br>
   </body>
+
+  <h1>{{ error }}</h1>
 
 </html>
