better working version

--- a/15_session/templates/login.html
+++ b/15_session/templates/login.html
@@ -36,7 +36,8 @@
     </h3>
     <form action="/auth">
       <input type="text" name="username">
-      <input type="text" name="password">
+      <!-- in order to hide it (smart!!!) -->
+      <input type="password" name="password">
       <input type="submit" name="sub1">
     </form>
     <br>
