--- a/15_session/templates/response.html
+++ b/15_session/templates/response.html
@@ -23,8 +23,8 @@
       the values of the variables here (username, method) were inputted in app.py
     --->
 
-    <h3> The entered username was "{{ username }}" </h3>
-    <h3> The request method used was "{{ method }}" </h3>
+    <h3> The entered username was {{ username }} </h3>
+    <h3> The request method used was {{ method }} </h3>
 
 
     <!---
@@ -55,5 +55,4 @@
   <form action="/logout">
     <input type="submit" value="Log Out">
   </form>
-  <br>
 </html>
